--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 <head>
 
     <meta charset="utf-8">
-    <title>Reactive Angular with RxJs Course</title>
+    <title>Reactive Angular Course</title>
     <base href="/">
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
